2010-03-05  Eric Carlson  <eric.carlson@apple.com>

        Unreviewed, build fix.

        media/video-preload.html fails on GTK, skip it.

        * platform/gtk/Skipped:

2010-03-04  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/7718442> Implement 'preload=none'
        https://bugs.webkit.org/show_bug.cgi?id=35789

        Functional test of the 'proload' attribute.

        * media/video-preload-expected.txt: Added.
        * media/video-preload.html: Added.
        * platform/win/Skipped: Skip on Windows for now.

2010-03-03  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Holger Freyther
        Patch by Antonio Gomes <tonikitoo@webkit.org>

        [Gtk] Implement setSpatialNavigationEnabled in DRT.
        https://bugs.webkit.org/show_bug.cgi?id=35705

        * platform/gtk/Skipped:

2010-03-03  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.
        Patch by Antonio Gomes <tonikitoo@webkit.org>

        Extend keyboard navigation to allow directional navigation (LayoutTests - part II)
        https://bugs.webkit.org/show_bug.cgi?id=18662

        This patch adds two LayoutTest to ensure the basic table traversal correctness of
        Spatial Navigation (SNav) algorithm: focusable elements in a <table> should be accessible.

        * fast/events/spatial-navigation/snav-table-traversal.html: Added.
          Makes sure all elements in a <table> are accessible via Spatial Navigation.
        * fast/events/spatial-navigation/snav-tiny-table-traversal.html: Added.
          Tests the similar table traversal scenario as above, but in this case the elements
          in the <table> are styled with 'font-size: small'. That way this test also validades
          that overlapping rects of elements too closed from each other are correctly handled.

2010-03-02  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.